--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -1,1 +1,8 @@
 
+.App{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #cae8f3;
+    min-height: 100vh;
+}
