--- a/src/components/Filter/styles.scss
+++ b/src/components/Filter/styles.scss
@@ -4,3 +4,30 @@
     flex-direction: column;
     align-items: center;
 }
+
+.filter__input{
+    border: 5px solid #4d4d4d;
+    border-radius: 15px;
+    width: 250px;
+    height: 50px;
+    background-color: #5CB799;
+    font-family: 'Zilla Slab', serif;
+    color: #353434;
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
+    @media all and (min-width:768px){
+        width: 350px;
+        height: 50px;
+        padding: 10px;
+
+    }
+
+    @media all and (min-width:1280px){
+        width: 600px;
+    }
+}
+
+.filter__label{
+    font-size: 30px;
+}
