--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,7 +1,97 @@
 .page__header{
-    height: 100px;
-    border-bottom: 1px solid lightgrey;
+    border-bottom: 10px solid #4d4d4d;
+    text-align: center;
+    min-width: 300px;
+    background-color: #E84848;
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 0;
+    padding: 30px;
+    width: 100%;
+    @media all and (min-width:768px){
+        margin-top: 20px;
+        height: 180px;
+
+        width:700px;
+        border-radius: 70px 70px 0 0;
+        align-items: baseline;
+        border: 10px solid #4d4d4d;
+
+    }
+
+    @media all and (min-width:1280px){
+        min-width: 1200px;
+    }
+}
+
+.header__title{
+    width: 100%;
+    font-size: 50px;
+    color: #353434;
     display: flex;
     justify-content: center;
-    align-items: center;
+    @media all and (min-width:768px){
+
+        width: 60%;
+    }
+
+    @media all and (min-width:1280px){
+
+    }
+}
+
+.header__circle{
+    width: 70px;
+    height: 70px;
+    background-color: rgb(84, 192, 216);
+    border-radius:50%;
+    border:5px solid #4d4d4d;
+    // margin: 30px;
+    @media all and (min-width:768px){
+        width: 100px;
+        height: 100px;
+        border:10px solid #4d4d4d;
+
+    }
+
+    @media all and (min-width:1280px){
+        font-size: 50px;
+    }
+        &-inside{
+        width: 20px;
+        height: 20px;
+        background-color: rgb(120, 219, 241);
+        border-radius:50%;
+        margin: 10px;
+            @media all and (min-width:1280px){
+                width: 20px;
+                height: 20px;
+                margin: 20px;
+            }
+        }
+    }
+        .circle-small{
+            width: 30px;
+            height: 30px;
+            background-color: #fff;
+            border-radius:50%;
+            border:3px solid #4d4d4d;
+            margin: 5px;
+        }
+
+
+.circle-small__container{
+    display:flex;
+}
+
+.red {
+    background-color: red;
+}
+
+.yellow{
+    background-color: yellow;
+}
+
+.green {
+    background-color: #8EE863;
 }
