--- a/src/components/Main/styles.scss
+++ b/src/components/Main/styles.scss
@@ -2,4 +2,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #E84848;
+    min-width: 300px;
+    width: 100%;
+    border-top: 0;
+    border-bottom: 0;
+    padding-bottom:40px;
+    flex-grow: 1;
+    @media all and (min-width:768px){
+        width: 700px;
+        border: 10px solid #4d4d4d;
+        border-top: 0;
+        border-bottom: 0;
+    }
+
+    @media all and (min-width:1280px){
+        width: 1200px;
+    }
 }
