--- a/src/components/PokemonList/styles.scss
+++ b/src/components/PokemonList/styles.scss
@@ -1,12 +1,23 @@
 .main__list{
-    max-width: 300px;
+    min-height: 280px;
+    min-width: 230px;
+    margin: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-content: center;
+    background-color:#4BB1C9;
+    border-radius: 25px;
+    padding-top:20px;
+    border: 10px solid #4d4d4d;
     @media all and (min-width:768px){
-        max-width: 700px;
+        max-width: 650px;
+        min-height: 500px;
+        min-width: 640px;
     }
     @media all and (min-width:1280px){
-        max-width: 1200px;
+        min-width: 800px;
+        max-width: 1050px;
+        min-height: 500px;
     }
 }
