--- a/src/components/PokemonCard/styles.scss
+++ b/src/components/PokemonCard/styles.scss
@@ -8,11 +8,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     border: 3px solid #4d4d4d;
     background-color: #e3f5fa;
     &:hover{
         box-shadow: 3px 3px 5px lightblue;
         cursor: pointer;   
     }
+}
+
+.item__type-list{
+    display: flex;
+    list-style: none;
+    width: 100%;
+    justify-content: space-around;
 }
