--- a/src/components/PokemonDetail/styles.scss
+++ b/src/components/PokemonDetail/styles.scss
@@ -1,32 +1,50 @@
 .main__detail{
-    min-height: 280px;
-    min-width: 230px;
-    margin: 20px;
+    width: 90%;
+    margin: 20px 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     background-color:#4BB1C9;
     border-radius: 25px;
-    padding-top:20px;
+    padding:20px;
     border: 10px solid #4d4d4d;
+    flex-grow: 1;
+    text-align: center;
     @media all and (min-width:768px){
-        max-width: 650px;
-        min-height: 500px;
-        min-width: 640px;
+        font-size: 30px;
     }
     @media all and (min-width:1280px){
-        min-width: 800px;
-        max-width: 1050px;
-        min-height: 700px;
+
     }
 }
 
 .detail__image{
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
     @media all and (min-width:768px){
-        width: 300px;
-        height: 300px;
+        width: 200px;
+        height: 200px;
     }
+}
+
+.pokemon-detail__back{
+    border: 5px solid #4d4d4d;
+    background-color: #b2e0f7;
+    text-decoration: none;
+    display: block;
+    padding: 15px 25px;
+    border-radius: 20px;
+    color: rgb(5, 62, 77);
+    &:hover{
+        color: #e5f1f7;
+        background-color: rgb(23, 187, 132);
+        font-weight: bold;
+    }
+}
+
+.detail__info{
+    padding: 15px 30px;
+    border-radius: 20px;
+    background-color: rgb(157, 216, 230);;
 }
