--- a/src/components/PokemonList/styles.scss
+++ b/src/components/PokemonList/styles.scss
@@ -1,23 +1,21 @@
 .main__list{
     min-height: 280px;
-    min-width: 230px;
-    margin: 20px;
+    min-width: 280px;
+    margin: 5px 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
     background-color:#4BB1C9;
     border-radius: 25px;
-    padding-top:20px;
+    padding-top:10px;
     border: 10px solid #4d4d4d;
     @media all and (min-width:768px){
-        max-width: 650px;
+        margin: 20px;
         min-height: 500px;
-        min-width: 640px;
     }
     @media all and (min-width:1280px){
-        min-width: 800px;
-        max-width: 1050px;
+        max-width: 1100px;
         min-height: 500px;
     }
 }
